--- a/Code/WDA_final_project.Rmd
+++ b/Code/WDA_final_project.Rmd
@@ -33,7 +33,7 @@ library(tseries)
 
 #set ggplot theme
 theme_set(theme_classic()+
-            theme(axis.text = element_text(color = "black", size = 10)))
+            theme(axis.text = element_text(color = "black", size = 8)))
 ```
 
 # Rationale and Research Questions
@@ -108,19 +108,20 @@ Gage Number | Location
 
 # Exploratory Analysis
 First thing's first: take a look at what data we have to work with. 
-```{r initial visualization, echo=FALSE}
+
+```{r initial visualization, echo=FALSE, message = FALSE, warning=FALSE}
 rawdata.plot <- ggplot(allsites.raw, aes(x = Date, y = Discharge_cfs, color = site_no)) +
   geom_point(alpha = 0.5, size = 0.3) +
   scale_color_viridis_d() +
-  scale_y_log10() +
   labs(x = "Date", y = "Discharge (cfs)", color = "Site")
-#rawdata.plot
+rawdata.plot
 ```
-After initial visualization, the Gila river data has been thrown out because there are so many zeroes. This is potentially due to the fact that this gage site is very near Yuma, Arizona where there is significant agriculture. Diversions in this area could be artificially lowering the level of the river there because it is such a heavily agricultural area.
 
-The next step in exploratory analysis is to wrangle the data into something useful. In this case, that means separating the data by gage. This could have been done by reading each gage in separately, but in this case it was done by filtering the large set already read in. 
+That's a lot to look at and not particularly useful. So after a little more digging and some other vizualizations that are maybe slightly more helpful, including a log10 transformation on the y-axis, the Gila river data has been thrown out because there are so many zeroes. This is potentially due to the fact that this gage site is very near Yuma, Arizona where there is significant agriculture. Diversions in this area could be artificially lowering the level of the river there because it is such a heavily agricultural area.
 
-```{r Wrangle like a Data Cowboy, include = FALSE}
+The next step in exploratory analysis is to wrangle the data into something useful. In this case, that means separating the data by gage. This could have been done by reading each gage in separately, but in this case it was done by filtering the large set already read in.
+
+```{r Wrangle like a Data Cowboy, include = FALSE, echo=FALSE, message = FALSE, warning=FALSE}
 #initial cleanup
 allsites.processed <- allsites.raw %>%
   filter(site_no != "09520500") %>% #remove the Gila data
@@ -137,12 +138,16 @@ allprocessed.plot <- ggplot(allsites.processed) +
   scale_y_log10() +
   scale_color_viridis_d() +
   labs(x = "Water Year", y = "Baseflow (cfs)", color = "Gage #")
-#allprocessed.plot
+allprocessed.plot
 #cool to see, but not particularly helpful
 #still going to write the csv
 #write_csv(allsites.processed, file = "./Data/Processed/allsites_processed.csv")
 #again, commented out to knit
-
+```
+The next step was to separate the current drought from a previous period. The current drought has been running since the year 2000, so the dividing line was 1999 at the end of the water year (September 30th). Similarly using the water year, the previous period was determined to start in 1964, on October 1st. This year was chosen because Lake Powell started filling in 1963, so a significant change due to the dam would not be captured in the data. 
+Both this prior period and the current drought were plotted by the Day of the Year to take a look at things and just see visually if there were any significant differences. There weren't any huge differences, but the plots are pretty neat. These are interesting plots to see the general pattern of flow throughout the year. In both plots, there is generally a spike between days 100 and 200, followed by a decrease to day 300, where things head back up and level out for a bit. The presence of dams is really notable, as the gages in chartreuse and yellow are the ones at Hoover and Imperial dams, and the Lee Ferry gage is not visible hidden directly behind the other two. All three show how much the dams level out seasonal variability, however. 
+It's also worth noting that the current period plot shows a much larger drop after day 200 than in previous years. This is interesting and may be a visible effect of what the drought looks like - late summer is particularly hot and dry causing regions no longer fed by snowmelt to really drop. 
+```{r Isolate the drought years, include = FALSE, echo = FALSE, message = FALSE}
 #let's see if we can isolate just the drought years
 current.drought <- allsites.processed %>%
   filter(Date > "1999-09-30")
@@ -151,26 +156,41 @@ ggplot(current.drought, aes(x = Date, y = Discharge_cfs, color = site_no)) +
   geom_line() +
   scale_y_log10()+
   labs(x = "Date", y = "Discharge(cfs)", color = "Gage No.")
-ggplot(current.drought, aes(x = DOY, y = Discharge_cfs, color = site_no)) +
-  geom_point(alpha = 0.5, size = 0.3) +
-  scale_y_log10() +
-  scale_color_viridis_d() +
-  labs(x = "Day of Year", y = "Discharge (cfs)", color = "Gage No.")
-#cool data, going to keep it, also allows me to ask a different question
 #write.csv(current.drought, file = "./Data/Processed/current_drought.csv")
 
 #now to select earlier data
 #choosing 1964 b/c Glen Canyon Dam started filling in 1963
 earlier.years <- allsites.processed %>%
   filter(Date > "1964-09-30" & Date < "1999-10-01")
+#write.csv(earlier.years, file = "./Data/Processed/1967to1999.csv")
+```
 
-ggplot(earlier.years, aes(x = DOY, y = Discharge_cfs, color = site_no))+
-  geom_point(alpha = 0.5, size = 0.3) +
+```{r Plot by DOY, echo=FALSE, message = FALSE, warning=FALSE, fig.align='left', fig.cap="Discharge plotted by Day of Year (1999-2022)"}
+
+drought_DOYplot <- ggplot(current.drought, 
+                          aes(x = DOY, y = Discharge_cfs, color = site_no)) +
+  geom_point(alpha = 0.3, size = 0.5) +
   scale_y_log10() +
   scale_color_viridis_d() +
   labs(x = "Day of Year", y = "Discharge (cfs)", color = "Gage No.")
-#write.csv(earlier.years, file = "./Data/Processed/1967to1999.csv")
+#cool data, going to keep it, also allows me to ask a different question
+drought_DOYplot
+```
 
+```{r Select the previous time period, echo = FALSE, message = FALSE, warning=FALSE, fig.align='left', fig.cap= "Discharge plotted by Day of Year (1964-1999)"}
+
+previous_DOYplot <- ggplot(earlier.years, aes(x = DOY, y = Discharge_cfs, color = site_no))+
+  geom_point(alpha = 0.3, size = 0.5) +
+  scale_y_log10() +
+  scale_color_viridis_d() +
+  labs(x = "Day of Year", y = "Discharge (cfs)", color = "Gage No.")
+#also neat
+previous_DOYplot
+```
+
+The last wrangling steps were to create summary datasets to look at annual changes, although not pictured. Discharge in cubic feet per second was converted to acre-feet per year and averaged over a given water year. Using the lf-stat package, baseflow and stormflow were also calculated. Baseflow is a measure of the amount of water in a stream that comes from slower sources that consistently feeds the stream - like infiltration or runoff that seeps through soil and makes its way into the river bed. Stormflow is surface flow during a precipitation or melting event, and everything but stormflow is baseflow. In the following analysis, baseflow is examined to see if the source of the water in the river is potentially changing.
+
+```{r Summaries of data in acre-feet, include = FALSE}
 #realized I gotta make a summary to get useful data
 allsites.summary <- allsites.processed %>%
   group_by(site_no, Water_Year) %>%
@@ -202,6 +222,7 @@ ggplot(allsites.summary, aes(x = Water_Year)) +
   labs(x = "Water Year", y = "Flow (ac-ft/yr)")
 
 # now to summarize each time period of interest
+
 current.drought.summary <- current.drought %>%
   group_by(site_no,Water_Year) %>%
   summarise(Discharge.acft.yr = mean(Discharge_cfs)*723.968, #convert cfs to ac-ft/yr
@@ -221,7 +242,7 @@ current.drought.summary <- current.drought %>%
                               site_no == "09379500" ~ "San_Juan",
                               site_no == "09380000" ~ "Lee_Ferry",
                               site_no == "09421500" ~ "Hoover",
-                              site_no == "09429490" ~ "Imperial")) %>%
+                              site_no == "09429490" ~ "Imperial"))
 
 earlier.years.summary <- earlier.years %>%
   group_by(site_no,Water_Year) %>%
@@ -242,70 +263,12 @@ earlier.years.summary <- earlier.years %>%
                               site_no == "09379500" ~ "San_Juan",
                               site_no == "09380000" ~ "Lee_Ferry",
                               site_no == "09421500" ~ "Hoover",
-                              site_no == "09429490" ~ "Imperial")) %>%
+                              site_no == "09429490" ~ "Imperial"))
 
 #welp realized these are useful joined
 allyears.summary <- full_join(current.drought.summary, earlier.years.summary)
 ```
 
-``` {Individual Sites, include = FALSE}
-#select current drought by sites
-current.Green.at.Fontenelle <- current.drought %>%
-  filter(site_no == "09209400")
-current.CO.at.Kremmling <- current.drought %>%
-  filter(site_no == "09058000")
-current.Green.below.FlamingGorge <- current.drought %>%
-  filter(site_no == "09234500")
-current.Yampa.above.Green <- current.drought %>%
-  filter(site_no == "09251000")
-current.CO.above.GrandJunction <- current.drought %>%
-  filter(site_no == "09095500")
-current.Gunnison.near.GrandJunction <- current.drought %>%
-  filter(site_no == "09152500")
-current.Green.at.GreenRiver <- current.drought %>%
-  filter(site_no == "09315000")
-current.CO.below.GrandJunction <- current.drought %>%
-  filter(site_no == "09163500")
-current.Dolores.river <- current.drought %>%
-  filter(site_no == "09180000")
-current.SanJuan.River <- current.drought %>%
-  filter(site_no == "09379500")
-current.Lee.Ferry <- current.drought %>%
-  filter(site_no == "09380000")
-current.CO.at.Hoover <- current.drought %>%
-  filter(site_no == "09421500")
-current.CO.at.Imperial <- current.drought %>%
-  filter(site_no == "09429490")
-
-#select past years by site
-past.Green.at.Fontenelle <- earlier.years %>%
-  filter(site_no == "09209400")
-past.CO.at.Kremmling <- earlier.years %>%
-  filter(site_no == "09058000")
-past.Green.below.FlamingGorge <- earlier.years %>%
-  filter(site_no == "09234500")
-past.Yampa.above.Green <- earlier.years %>%
-  filter(site_no == "09251000")
-past.CO.above.GrandJunction <- earlier.years %>%
-  filter(site_no == "09095500")
-past.Gunnison.near.GrandJunction <- earlier.years %>%
-  filter(site_no == "09152500")
-past.Green.at.GreenRiver <- earlier.years %>%
-  filter(site_no == "09315000")
-past.CO.below.GrandJunction <- earlier.years %>%
-  filter(site_no == "09163500")
-past.Dolores.river <- earlier.years %>%
-  filter(site_no == "09180000")
-past.SanJuan.River <- earlier.years %>%
-  filter(site_no == "09379500")
-past.Lee.Ferry <- earlier.years %>%
-  filter(site_no == "09380000")
-past.CO.at.Hoover <- earlier.years %>%
-  filter(site_no == "09421500")
-past.CO.at.Imperial <- earlier.years %>%
-  filter(site_no == "09429490")
-
-```
 \newpage
 
 # Analysis
@@ -316,7 +279,7 @@ Interestingly, discharge does not appear to have changed much between the two pe
 Figure X displays that while there was no huge shift in discharge at any one site, there was some interannual variability in discharge, but at different times in the Upper and Lower basins. Prior to the drought in the Lower Basin there appears to be more variability - sites at Lee's Ferry, Hoover Dam, and Imperial Dam all appear to have more range in the earlier time frame. The Upper Basin sites (those other than the three listed above) appear to have slightly more discharge variability during the drought, if anything.
 
 
-``` {Annual discharge patterns, include = FALSE}
+``` {r Discharge Patterns , include = FALSE}
 #get past averages
 past.annual.average.discharge <- mean(earlier.years.summary$Discharge.acft.yr)
 past.annual.average.baseflow <- mean(earlier.years.summary$Baseflow.acft.yr)
@@ -330,15 +293,16 @@ current.annual.average.propbf <- mean(current.drought.summary$prop.baseflow)
 
 ```
 
-```{Annual discharge boxplots, echo = FALSE, message = FALSE, fig.align = 'left', fig.cap = "Annual Discharge per site during previous years and the current drought"}
+```{r Annual Discharge boxplots, echo = FALSE, message = FALSE, fig.align = 'left', fig.cap = "Annual Discharge per site during previous years and the current drought"}
 past.boxplot <- ggplot(earlier.years.summary, 
                        aes(x = Site_Name, y = Discharge.acft.yr)) +
   geom_boxplot()+
   geom_jitter(width = 0.15) +
   geom_hline(yintercept = past.annual.average.discharge) +
   scale_x_discrete(limits = c("Fontenelle", "Kremmling", "Flaming_Gorge", "Yampa", "GJ_Upstream", "Gunnison", "GJ_Downstream", "Green_River", "Dolores", "San_Juan", "Lee_Ferry", "Hoover", "Imperial")) +
-  labs(x = "", y = "Discharge (ac-ft/yr)") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  labs(x = "", y = "Discharge (ac-ft/yr)", title = "1964 to 1999") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        axis.title.y = element_text(size = 10))
 
 drought.boxplot <- ggplot(current.drought.summary, 
                           aes(x = Site_Name, y = Discharge.acft.yr)) +
@@ -346,8 +310,9 @@ drought.boxplot <- ggplot(current.drought.summary,
   geom_jitter(width = 0.15) +
   geom_hline(yintercept = current.annual.average.discharge) +
   scale_x_discrete(limits = c("Fontenelle", "Kremmling", "Flaming_Gorge", "Yampa", "GJ_Upstream", "Gunnison", "GJ_Downstream", "Green_River", "Dolores", "San_Juan", "Lee_Ferry", "Hoover", "Imperial")) +
-  labs(x = "Site", y = "Discharge (ac-ft/yr)") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  labs(x = "Site", y = "Discharge (ac-ft/yr)", title = "2000-2021") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        axis.title.y = element_text(size = 10))
 
 Discharge.boxplot <- plot_grid(past.boxplot, drought.boxplot,
           ncol = 1,
@@ -355,9 +320,11 @@ Discharge.boxplot <- plot_grid(past.boxplot, drought.boxplot,
 Discharge.boxplot
 ```
 
+\newpage
+
 Looking at discharge over time, we can see that there is a decreasing trend in many of the sites examined. In fact, the only sites that don't appear to have a decreasing trend are the Colorado at Kremmling, CO and below Hoover Dam, which actually appears to be increasing. The most significant decrease appears to be above Imperial Dam, which is the last dam before the river enters Mexico. This decrease doesn't align super well with the drought and is more likely due to management decisions made between the U.S. and Mexico to deal with salinity issues in the river entering Mexico. 
 
-```{Annual Discharge, echo = FALSE, message = FALSE, fig.align ='left', fig.cap = "Annual Discharge over time"}
+```{r Discharge Over Time, echo = FALSE, message = FALSE, fig.align ='left', fig.cap = "Annual Discharge over time"}
 annualdischarge.plot <- ggplot(allyears.summary, 
                                 aes(x = Water_Year, y = Discharge.acft.yr,
                                     color = Site_Name)) +
@@ -368,7 +335,7 @@ annualdischarge.plot <- ggplot(allyears.summary,
 annualdischarge.plot
 ```
 
-```{Annual Discharge Trends, echo = FALSE, message = FALSE, fig.align ='left', fig.cap = "Annual Discharge over time on log scale"}
+```{r Annual Discharge Trends, echo = FALSE, message = FALSE, fig.align ='left', fig.cap = "Annual Discharge over time on log scale"}
 annualdischarge.trends <- ggplot(allyears.summary, 
                                 aes(x = as.numeric(Water_Year), y = Discharge.acft.yr,
                                     color = Site_Name)) +
@@ -380,7 +347,7 @@ annualdischarge.trends
 ```
 
 Interestingly, we can see that the proportion of flows made up by baseflow is increasing over time. I'm not entirely sure why that is the case, but to me it shows the basin getting drier. A higher proportion baseflow combined with a decrease in discharge means that the baseflow is what is decreasing, either due to reduced snowpack and runoff, drier soils, or a combination of the two. 
-```{Annual Proportion of Baseflow, echo = FALSE, message = FALSE, fig.align = 'left', fig.cap = "Annual Proportion of Baseflow Over Time"}
+```{r Proportion of Baseflow, echo = FALSE, message = FALSE, fig.align = 'left', fig.cap = "Annual Proportion of Baseflow Over Time"}
 annualpropbf.plot <- ggplot() +
   geom_point(data = earlier.years.summary,
             aes(x = Water_Year, y = prop.baseflow, color = Site_Name))+
@@ -396,10 +363,8 @@ annualpropbf.plot
 \newpage
 
 # Summary and Conclusions
-The Colorado River Basin is experiencing extreme drought that is starting to show impacts on the river. There 
+The Colorado River Basin is experiencing extreme drought that is starting to show impacts on the river. There is a significant difference in mean discharge between the two time periods, about 700,000 acre-feet across the whole system. This is a crude figure, but importantly shows that there is a significant decrease in water in the system. The lower basin appears to be exhibitng more stability during the drought, potentially due to management shifts in the 1990s with the completion of the Central Arizona Project. 
 
-\newpage
+Baseflow proportion is increasing across the entire river system, reflecting decreased stormflow. In conjunction with the Day of Year plot in the exploratory analysis, this becomes really interesting. A decrease in stormflow may explain why there is such a steeper drop after day 200 than in the earlier period. Fewer (or no) late summer storms means that all the water in certain regions is coming from baseflow (probably fed by snowmelt) and that drop is a depiction of the discharge really being depleted by that lack of stormflow. Snowmelt also is known to be happening faster and finishing a little earlier in the year due to climate change, so that big dip could also be reflecting the increased rate in that process as well.
 
-#References
-
-
+This analysis barely even started to scratch the surface of what could be analyzed looking at the impacts of this drought on the Colorado River. Looking forward, there are plenty of analyses still to be done to really gauge the changes the river is experiencing as a cause of this drought. There are comparisons to be made between the tributaries, between dammed and undammed sections, and examinations of Lakes Mead and Powell as well. This analysis really just confirmed what is pretty much common sense: 20+ years of drought can be seen in the data (even with such a simple, quick look) and there are many more avenues of exploration open. 
