--- a/Code/WDA_final_project.tex
+++ b/Code/WDA_final_project.tex
@@ -117,9 +117,13 @@ Questions:
 \tightlist
 \item
   How do discharge and baseflow change through the current drought. Is
-  there noticeable change? 1.a. How do different parts of the basin look
-  during the drought? Are there significant differences by location?
+  there noticeable change?
 \end{enumerate}
+\end{quote}
+
+\begin{quote}
+1.a. How do different parts of the basin look during the drought? Are
+there significant differences by location?
 \end{quote}
 
 \newpage
